--- a/NAMESPACE
+++ b/NAMESPACE
@@ -67,47 +67,116 @@ exportMethods(sampleData)
 exportMethods(sampleNames)
 exportMethods(summary)
 exportMethods(topMarkers)
+importClassesFrom(AcidGenomes,Gene2Symbol)
 importClassesFrom(AcidSingleCell,KnownMarkers)
+importClassesFrom(IRanges,CompressedSplitDFrameList)
+importClassesFrom(S4Vectors,DFrame)
 importClassesFrom(Seurat,Seurat)
 importClassesFrom(SingleCellExperiment,SingleCellExperiment)
+importFrom(AcidBase,printString)
+importFrom(AcidBase,showSlotInfo)
+importFrom(AcidCLI,abort)
+importFrom(AcidCLI,alert)
+importFrom(AcidCLI,alertInfo)
+importFrom(AcidCLI,alertSuccess)
+importFrom(AcidCLI,alertWarning)
+importFrom(AcidCLI,dl)
+importFrom(AcidCLI,h1)
+importFrom(AcidCLI,h2)
+importFrom(AcidCLI,separator)
+importFrom(AcidCLI,toInlineString)
+importFrom(AcidCLI,ul)
+importFrom(AcidCLI,verbatim)
+importFrom(AcidExperiment,matchInterestingGroups)
+importFrom(AcidExperiment,sampleNames)
+importFrom(AcidGenerics,"interestingGroups<-")
+importFrom(AcidGenerics,"sampleData<-")
+importFrom(AcidGenerics,Gene2Symbol)
 importFrom(AcidGenerics,KnownMarkers)
+importFrom(AcidGenerics,camelCase)
+importFrom(AcidGenerics,cellCountsPerCluster)
+importFrom(AcidGenerics,cellTypesPerCluster)
+importFrom(AcidGenerics,clusters)
+importFrom(AcidGenerics,convertGenesToSymbols)
+importFrom(AcidGenerics,cpm)
+importFrom(AcidGenerics,diffExp)
+importFrom(AcidGenerics,diffExpPerCluster)
+importFrom(AcidGenerics,findMarkers)
+importFrom(AcidGenerics,geometricMean)
+importFrom(AcidGenerics,interestingGroups)
+importFrom(AcidGenerics,leftJoin)
+importFrom(AcidGenerics,makeLabel)
+importFrom(AcidGenerics,makeNames)
+importFrom(AcidGenerics,mapGenesToIDs)
+importFrom(AcidGenerics,mapGenesToRownames)
+importFrom(AcidGenerics,mapGenesToSymbols)
+importFrom(AcidGenerics,melt)
+importFrom(AcidGenerics,metrics)
+importFrom(AcidGenerics,mutateIf)
+importFrom(AcidGenerics,plotCellCountsPerCluster)
+importFrom(AcidGenerics,plotCellTypesPerCluster)
+importFrom(AcidGenerics,plotCounts)
+importFrom(AcidGenerics,plotDots)
+importFrom(AcidGenerics,plotFeature)
+importFrom(AcidGenerics,plotKnownMarkers)
+importFrom(AcidGenerics,plotMarker)
 importFrom(AcidGenerics,plotPCElbow)
+importFrom(AcidGenerics,plotReducedDim)
+importFrom(AcidGenerics,plotStackedBarPlot)
+importFrom(AcidGenerics,plotTSNE)
 importFrom(AcidGenerics,plotTopMarkers)
+importFrom(AcidGenerics,plotUMAP)
+importFrom(AcidGenerics,plotViolin)
+importFrom(AcidGenerics,sampleData)
+importFrom(AcidGenerics,snakeCase)
 importFrom(AcidGenerics,topMarkers)
+importFrom(AcidGenerics,uniteInterestingGroups)
+importFrom(AcidGenomes,makeGene2SymbolFromEnsembl)
+importFrom(AcidMarkdown,markdownHeader)
 importFrom(AcidPlots,"!!")
 importFrom(AcidPlots,acid_theme_dark)
 importFrom(AcidPlots,acid_theme_light)
 importFrom(AcidPlots,matchLabels)
 importFrom(AcidPlots,percent)
-importFrom(AcidPlots,plotCellCountsPerCluster)
-importFrom(AcidPlots,plotCellTypesPerCluster)
-importFrom(AcidPlots,plotCounts)
-importFrom(AcidPlots,plotDots)
-importFrom(AcidPlots,plotFeature)
-importFrom(AcidPlots,plotKnownMarkers)
-importFrom(AcidPlots,plotMarker)
-importFrom(AcidPlots,plotPCA)
-importFrom(AcidPlots,plotReducedDim)
-importFrom(AcidPlots,plotStackedBarPlot)
-importFrom(AcidPlots,plotTSNE)
-importFrom(AcidPlots,plotUMAP)
-importFrom(AcidPlots,plotViolin)
 importFrom(AcidPlots,pretty_breaks)
 importFrom(AcidPlots,sym)
 importFrom(AcidPlots,syms)
 importFrom(AcidPlots,wrap_plots)
-importFrom(AcidSingleCell,cellCountsPerCluster)
-importFrom(AcidSingleCell,cellTypesPerCluster)
-importFrom(AcidSingleCell,clusters)
-importFrom(AcidSingleCell,cpm)
-importFrom(AcidSingleCell,diffExp)
-importFrom(AcidSingleCell,diffExpPerCluster)
-importFrom(AcidSingleCell,findMarkers)
-importFrom(AcidSingleCell,normalize)
+importFrom(BiocGenerics,"counts<-")
+importFrom(BiocGenerics,"organism<-")
+importFrom(BiocGenerics,"sizeFactors<-")
+importFrom(BiocGenerics,as.data.frame)
+importFrom(BiocGenerics,cbind)
+importFrom(BiocGenerics,counts)
+importFrom(BiocGenerics,do.call)
+importFrom(BiocGenerics,lapply)
+importFrom(BiocGenerics,normalize)
+importFrom(BiocGenerics,organism)
+importFrom(BiocGenerics,plotPCA)
+importFrom(BiocGenerics,rowMeans)
+importFrom(BiocGenerics,rowSums)
+importFrom(BiocGenerics,sapply)
+importFrom(BiocGenerics,sizeFactors)
+importFrom(BiocGenerics,t)
+importFrom(BiocGenerics,table)
+importFrom(BiocGenerics,unsplit)
 importFrom(BiocParallel,"bpprogressbar<-")
 importFrom(BiocParallel,bpparam)
 importFrom(BiocParallel,bpprogressbar)
+importFrom(IRanges,SplitDataFrameList)
+importFrom(S4Vectors,"mcols<-")
+importFrom(S4Vectors,"metadata<-")
+importFrom(S4Vectors,DataFrame)
+importFrom(S4Vectors,as.matrix)
+importFrom(S4Vectors,complete.cases)
+importFrom(S4Vectors,decode)
+importFrom(S4Vectors,head)
+importFrom(S4Vectors,mcols)
+importFrom(S4Vectors,metadata)
+importFrom(S4Vectors,na.omit)
+importFrom(S4Vectors,split)
 importFrom(S4Vectors,summary)
+importFrom(S4Vectors,tail)
 importFrom(Seurat,CreateSeuratObject)
 importFrom(Seurat,DefaultAssay)
 importFrom(Seurat,GetAssayData)
@@ -117,103 +186,27 @@ importFrom(Seurat,Stdev)
 importFrom(Seurat,VariableFeatures)
 importFrom(Seurat,as.Seurat)
 importFrom(Seurat,as.SingleCellExperiment)
-importFrom(basejump,"assay<-")
-importFrom(basejump,"assays<-")
-importFrom(basejump,"colData<-")
-importFrom(basejump,"counts<-")
-importFrom(basejump,"interestingGroups<-")
-importFrom(basejump,"logcounts<-")
-importFrom(basejump,"mcols<-")
-importFrom(basejump,"metadata<-")
-importFrom(basejump,"normcounts<-")
-importFrom(basejump,"organism<-")
-importFrom(basejump,"reducedDim<-")
-importFrom(basejump,"reducedDimNames<-")
-importFrom(basejump,"rowData<-")
-importFrom(basejump,"rowRanges<-")
-importFrom(basejump,"sampleData<-")
-importFrom(basejump,"sizeFactors<-")
-importFrom(basejump,DataFrame)
-importFrom(basejump,Gene2Symbol)
-importFrom(basejump,SingleCellExperiment)
-importFrom(basejump,SplitDataFrameList)
-importFrom(basejump,abort)
-importFrom(basejump,alert)
-importFrom(basejump,alertInfo)
-importFrom(basejump,alertSuccess)
-importFrom(basejump,alertWarning)
-importFrom(basejump,as.data.frame)
-importFrom(basejump,as.matrix)
-importFrom(basejump,assay)
-importFrom(basejump,assayNames)
-importFrom(basejump,assays)
-importFrom(basejump,camelCase)
-importFrom(basejump,capture.output)
-importFrom(basejump,cbind)
-importFrom(basejump,coerce)
-importFrom(basejump,colData)
-importFrom(basejump,complete.cases)
-importFrom(basejump,convertGenesToSymbols)
-importFrom(basejump,counts)
-importFrom(basejump,data)
-importFrom(basejump,decode)
-importFrom(basejump,dl)
-importFrom(basejump,do.call)
-importFrom(basejump,geometricMean)
-importFrom(basejump,h1)
-importFrom(basejump,h2)
-importFrom(basejump,head)
-importFrom(basejump,import)
-importFrom(basejump,interestingGroups)
-importFrom(basejump,lapply)
-importFrom(basejump,leftJoin)
-importFrom(basejump,logcounts)
-importFrom(basejump,makeGene2SymbolFromEnsembl)
-importFrom(basejump,makeLabel)
-importFrom(basejump,makeNames)
-importFrom(basejump,mapGenesToIDs)
-importFrom(basejump,mapGenesToRownames)
-importFrom(basejump,mapGenesToSymbols)
-importFrom(basejump,markdownHeader)
-importFrom(basejump,matchInterestingGroups)
-importFrom(basejump,mcols)
-importFrom(basejump,median)
-importFrom(basejump,melt)
-importFrom(basejump,metadata)
-importFrom(basejump,metrics)
-importFrom(basejump,model.matrix)
-importFrom(basejump,mutateIf)
-importFrom(basejump,na.omit)
-importFrom(basejump,normcounts)
-importFrom(basejump,organism)
-importFrom(basejump,packageName)
-importFrom(basejump,packageVersion)
-importFrom(basejump,printString)
-importFrom(basejump,reducedDim)
-importFrom(basejump,reducedDimNames)
-importFrom(basejump,reducedDims)
-importFrom(basejump,relevel)
-importFrom(basejump,rowData)
-importFrom(basejump,rowMeans)
-importFrom(basejump,rowRanges)
-importFrom(basejump,rowSums)
-importFrom(basejump,sampleData)
-importFrom(basejump,sampleNames)
-importFrom(basejump,sapply)
-importFrom(basejump,separator)
-importFrom(basejump,session_info)
-importFrom(basejump,showSlotInfo)
-importFrom(basejump,sizeFactors)
-importFrom(basejump,snakeCase)
-importFrom(basejump,split)
-importFrom(basejump,t)
-importFrom(basejump,table)
-importFrom(basejump,tail)
-importFrom(basejump,toInlineString)
-importFrom(basejump,ul)
-importFrom(basejump,uniteInterestingGroups)
-importFrom(basejump,unsplit)
-importFrom(basejump,verbatim)
+importFrom(SingleCellExperiment,"logcounts<-")
+importFrom(SingleCellExperiment,"normcounts<-")
+importFrom(SingleCellExperiment,"reducedDim<-")
+importFrom(SingleCellExperiment,"reducedDimNames<-")
+importFrom(SingleCellExperiment,SingleCellExperiment)
+importFrom(SingleCellExperiment,logcounts)
+importFrom(SingleCellExperiment,normcounts)
+importFrom(SingleCellExperiment,reducedDim)
+importFrom(SingleCellExperiment,reducedDimNames)
+importFrom(SingleCellExperiment,reducedDims)
+importFrom(SummarizedExperiment,"assay<-")
+importFrom(SummarizedExperiment,"assays<-")
+importFrom(SummarizedExperiment,"colData<-")
+importFrom(SummarizedExperiment,"rowData<-")
+importFrom(SummarizedExperiment,"rowRanges<-")
+importFrom(SummarizedExperiment,assay)
+importFrom(SummarizedExperiment,assayNames)
+importFrom(SummarizedExperiment,assays)
+importFrom(SummarizedExperiment,colData)
+importFrom(SummarizedExperiment,rowData)
+importFrom(SummarizedExperiment,rowRanges)
 importFrom(edgeR,DGEList)
 importFrom(edgeR,calcNormFactors)
 importFrom(edgeR,estimateDisp)
@@ -292,3 +285,54 @@ importFrom(methods,setValidity)
 importFrom(methods,show)
 importFrom(methods,slot)
 importFrom(methods,validObject)
+importFrom(pipette,import)
+importFrom(stats,median)
+importFrom(stats,model.matrix)
+importFrom(stats,relevel)
+importFrom(utils,capture.output)
+importFrom(utils,data)
+importFrom(utils,packageName)
+importFrom(utils,packageVersion)
+importFrom(utils,sessionInfo)
+importMethodsFrom(AcidBase,geometricMean)
+importMethodsFrom(AcidExperiment,"interestingGroups<-")
+importMethodsFrom(AcidExperiment,"sampleData<-")
+importMethodsFrom(AcidExperiment,convertGenesToSymbols)
+importMethodsFrom(AcidExperiment,interestingGroups)
+importMethodsFrom(AcidExperiment,mapGenesToIDs)
+importMethodsFrom(AcidExperiment,mapGenesToRownames)
+importMethodsFrom(AcidExperiment,mapGenesToSymbols)
+importMethodsFrom(AcidExperiment,metrics)
+importMethodsFrom(AcidExperiment,sampleData)
+importMethodsFrom(AcidExperiment,sampleNames)
+importMethodsFrom(AcidExperiment,uniteInterestingGroups)
+importMethodsFrom(AcidPlots,plotCellCountsPerCluster)
+importMethodsFrom(AcidPlots,plotCellTypesPerCluster)
+importMethodsFrom(AcidPlots,plotCounts)
+importMethodsFrom(AcidPlots,plotDots)
+importMethodsFrom(AcidPlots,plotFeature)
+importMethodsFrom(AcidPlots,plotKnownMarkers)
+importMethodsFrom(AcidPlots,plotMarker)
+importMethodsFrom(AcidPlots,plotPCA)
+importMethodsFrom(AcidPlots,plotReducedDim)
+importMethodsFrom(AcidPlots,plotStackedBarPlot)
+importMethodsFrom(AcidPlots,plotTSNE)
+importMethodsFrom(AcidPlots,plotUMAP)
+importMethodsFrom(AcidPlots,plotViolin)
+importMethodsFrom(AcidPlyr,leftJoin)
+importMethodsFrom(AcidPlyr,melt)
+importMethodsFrom(AcidPlyr,mutateIf)
+importMethodsFrom(AcidSingleCell,cellCountsPerCluster)
+importMethodsFrom(AcidSingleCell,cellTypesPerCluster)
+importMethodsFrom(AcidSingleCell,clusters)
+importMethodsFrom(AcidSingleCell,cpm)
+importMethodsFrom(AcidSingleCell,diffExp)
+importMethodsFrom(AcidSingleCell,diffExpPerCluster)
+importMethodsFrom(AcidSingleCell,findMarkers)
+importMethodsFrom(AcidSingleCell,geometricMean)
+importMethodsFrom(AcidSingleCell,normalize)
+importMethodsFrom(pipette,import)
+importMethodsFrom(syntactic,camelCase)
+importMethodsFrom(syntactic,makeLabel)
+importMethodsFrom(syntactic,makeNames)
+importMethodsFrom(syntactic,snakeCase)
