Improve coercion methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,8 @@
 export(KnownMarkers)
 export(SeuratMarkers)
 export(SeuratMarkersPerCluster)
+export(as.Seurat)
+export(as.SingleCellExperiment)
 export(plotPCElbow)
 export(plotTopMarkers)
 export(runSeurat)
@@ -20,6 +22,8 @@ exportMethods(Gene2Symbol)
 exportMethods(KnownMarkers)
 exportMethods(SeuratMarkers)
 exportMethods(SeuratMarkersPerCluster)
+exportMethods(as.Seurat)
+exportMethods(as.SingleCellExperiment)
 exportMethods(assay)
 exportMethods(assayNames)
 exportMethods(assays)
@@ -93,6 +97,8 @@ importFrom(AcidGenerics,"interestingGroups<-")
 importFrom(AcidGenerics,"sampleData<-")
 importFrom(AcidGenerics,Gene2Symbol)
 importFrom(AcidGenerics,KnownMarkers)
+importFrom(AcidGenerics,as.Seurat)
+importFrom(AcidGenerics,as.SingleCellExperiment)
 importFrom(AcidGenerics,camelCase)
 importFrom(AcidGenerics,cellCountsPerCluster)
 importFrom(AcidGenerics,cellTypesPerCluster)
@@ -184,8 +190,6 @@ importFrom(Seurat,Idents)
 importFrom(Seurat,NormalizeData)
 importFrom(Seurat,Stdev)
 importFrom(Seurat,VariableFeatures)
-importFrom(Seurat,as.Seurat)
-importFrom(Seurat,as.SingleCellExperiment)
 importFrom(SingleCellExperiment,"logcounts<-")
 importFrom(SingleCellExperiment,"normcounts<-")
 importFrom(SingleCellExperiment,"reducedDim<-")
