Update example objects

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -163,8 +163,10 @@ importFrom(BiocGenerics,rowMeans)
 importFrom(BiocGenerics,rowSums)
 importFrom(BiocGenerics,sapply)
 importFrom(BiocGenerics,sizeFactors)
+importFrom(BiocGenerics,sort)
 importFrom(BiocGenerics,t)
 importFrom(BiocGenerics,table)
+importFrom(BiocGenerics,unique)
 importFrom(BiocGenerics,unsplit)
 importFrom(BiocParallel,"bpprogressbar<-")
 importFrom(BiocParallel,bpparam)
