--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: pointillism
 Title: Single-cell RNA-seq toolkit
 Description: Toolkit for single-cell RNA-seq clustering analysis.
-Version: 0.6.0
-Date: 2022-03-11
+Version: 0.6.1
+Date: 2022-06-08
 Authors@R: c(
     person(
         given = "Michael",
@@ -60,7 +60,8 @@ Suggests:
     basejump,
     future,
     rmarkdown,
-    testthat
-Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.2.9000
+    testthat (>= 3.0.0)
 Additional_repositories: https://r.acidgenomics.com
+Config/testthat/edition: 3
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.2.0
