--- a/NAMESPACE
+++ b/NAMESPACE
@@ -159,8 +159,6 @@ importFrom(BiocGenerics,lapply)
 importFrom(BiocGenerics,normalize)
 importFrom(BiocGenerics,organism)
 importFrom(BiocGenerics,plotPCA)
-importFrom(BiocGenerics,rowMeans)
-importFrom(BiocGenerics,rowSums)
 importFrom(BiocGenerics,sapply)
 importFrom(BiocGenerics,sizeFactors)
 importFrom(BiocGenerics,sort)
@@ -172,6 +170,8 @@ importFrom(BiocParallel,"bpprogressbar<-")
 importFrom(BiocParallel,bpparam)
 importFrom(BiocParallel,bpprogressbar)
 importFrom(IRanges,SplitDataFrameList)
+importFrom(Matrix,rowMeans)
+importFrom(Matrix,rowSums)
 importFrom(S4Vectors,"mcols<-")
 importFrom(S4Vectors,"metadata<-")
 importFrom(S4Vectors,DataFrame)
