--- a/NAMESPACE
+++ b/NAMESPACE
@@ -139,14 +139,12 @@ importFrom(AcidGenerics,topMarkers)
 importFrom(AcidGenerics,uniteInterestingGroups)
 importFrom(AcidGenomes,makeGene2SymbolFromEnsembl)
 importFrom(AcidMarkdown,markdownHeader)
-importFrom(AcidPlots,"!!")
+importFrom(AcidPlots,.data)
 importFrom(AcidPlots,acid_theme_dark)
 importFrom(AcidPlots,acid_theme_light)
 importFrom(AcidPlots,matchLabels)
 importFrom(AcidPlots,percent)
 importFrom(AcidPlots,pretty_breaks)
-importFrom(AcidPlots,sym)
-importFrom(AcidPlots,syms)
 importFrom(AcidPlots,wrap_plots)
 importFrom(BiocGenerics,"counts<-")
 importFrom(BiocGenerics,"organism<-")
