--- a/NAMESPACE
+++ b/NAMESPACE
@@ -185,11 +185,11 @@ importFrom(S4Vectors,summary)
 importFrom(S4Vectors,tail)
 importFrom(Seurat,CreateSeuratObject)
 importFrom(Seurat,DefaultAssay)
-importFrom(Seurat,GetAssayData)
 importFrom(Seurat,Idents)
 importFrom(Seurat,NormalizeData)
 importFrom(Seurat,Stdev)
 importFrom(Seurat,VariableFeatures)
+importFrom(SeuratObject,LayerData)
 importFrom(SingleCellExperiment,"logcounts<-")
 importFrom(SingleCellExperiment,"normcounts<-")
 importFrom(SingleCellExperiment,"reducedDim<-")
