--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -63,5 +63,6 @@ Suggests:
     testthat (>= 3.1.10)
 Additional_repositories: https://r.acidgenomics.com
 Config/testthat/edition: 3
+Config/testthat/parallel: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
