Prepare support for Seurat 5

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -190,6 +190,7 @@ importFrom(Seurat,NormalizeData)
 importFrom(Seurat,Stdev)
 importFrom(Seurat,VariableFeatures)
 importFrom(SeuratObject,LayerData)
+importFrom(SeuratObject,Layers)
 importFrom(SingleCellExperiment,"logcounts<-")
 importFrom(SingleCellExperiment,"normcounts<-")
 importFrom(SingleCellExperiment,"reducedDim<-")
