--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,7 +18,7 @@ exportMethods("metadata<-")
 exportMethods("organism<-")
 exportMethods("rowRanges<-")
 exportMethods("sampleData<-")
-exportMethods(Gene2Symbol)
+exportMethods(GeneToSymbol)
 exportMethods(KnownMarkers)
 exportMethods(SeuratMarkers)
 exportMethods(SeuratMarkersPerCluster)
@@ -71,7 +71,7 @@ exportMethods(sampleData)
 exportMethods(sampleNames)
 exportMethods(summary)
 exportMethods(topMarkers)
-importClassesFrom(AcidGenomes,Gene2Symbol)
+importClassesFrom(AcidGenomes,GeneToSymbol)
 importClassesFrom(AcidSingleCell,KnownMarkers)
 importClassesFrom(IRanges,CompressedSplitDFrameList)
 importClassesFrom(S4Vectors,DFrame)
@@ -95,7 +95,7 @@ importFrom(AcidExperiment,matchInterestingGroups)
 importFrom(AcidExperiment,sampleNames)
 importFrom(AcidGenerics,"interestingGroups<-")
 importFrom(AcidGenerics,"sampleData<-")
-importFrom(AcidGenerics,Gene2Symbol)
+importFrom(AcidGenerics,GeneToSymbol)
 importFrom(AcidGenerics,KnownMarkers)
 importFrom(AcidGenerics,as.Seurat)
 importFrom(AcidGenerics,as.SingleCellExperiment)
@@ -137,7 +137,7 @@ importFrom(AcidGenerics,sampleData)
 importFrom(AcidGenerics,snakeCase)
 importFrom(AcidGenerics,topMarkers)
 importFrom(AcidGenerics,uniteInterestingGroups)
-importFrom(AcidGenomes,makeGene2SymbolFromEnsembl)
+importFrom(AcidGenomes,makeGeneToSymbolFromEnsembl)
 importFrom(AcidMarkdown,markdownHeader)
 importFrom(AcidPlots,.data)
 importFrom(AcidPlots,acid_theme_dark)
@@ -269,6 +269,7 @@ importFrom(goalie,isScalar)
 importFrom(goalie,isScalarNumeric)
 importFrom(goalie,isString)
 importFrom(goalie,isSubset)
+importFrom(goalie,requireNamespaces)
 importFrom(goalie,validate)
 importFrom(methods,"slot<-")
 importFrom(methods,.hasSlot)
