Enforce strict camel case

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,7 @@ export(SeuratMarkers)
 export(SeuratMarkersPerCluster)
 export(as.Seurat)
 export(as.SingleCellExperiment)
-export(plotPCElbow)
+export(plotPcElbow)
 export(plotTopMarkers)
 export(runSeurat)
 export(summary)
@@ -38,7 +38,7 @@ exportMethods(diffExpPerCluster)
 exportMethods(findMarkers)
 exportMethods(interestingGroups)
 exportMethods(logcounts)
-exportMethods(mapGenesToIDs)
+exportMethods(mapGenesToIds)
 exportMethods(mapGenesToRownames)
 exportMethods(mapGenesToSymbols)
 exportMethods(metadata)
@@ -53,13 +53,13 @@ exportMethods(plotDots)
 exportMethods(plotFeature)
 exportMethods(plotKnownMarkers)
 exportMethods(plotMarker)
-exportMethods(plotPCA)
-exportMethods(plotPCElbow)
+exportMethods(plotPcElbow)
+exportMethods(plotPca)
 exportMethods(plotReducedDim)
 exportMethods(plotStackedBarPlot)
-exportMethods(plotTSNE)
 exportMethods(plotTopMarkers)
-exportMethods(plotUMAP)
+exportMethods(plotTsne)
+exportMethods(plotUmap)
 exportMethods(plotViolin)
 exportMethods(reducedDim)
 exportMethods(reducedDimNames)
@@ -113,7 +113,7 @@ importFrom(AcidGenerics,interestingGroups)
 importFrom(AcidGenerics,leftJoin)
 importFrom(AcidGenerics,makeLabel)
 importFrom(AcidGenerics,makeNames)
-importFrom(AcidGenerics,mapGenesToIDs)
+importFrom(AcidGenerics,mapGenesToIds)
 importFrom(AcidGenerics,mapGenesToRownames)
 importFrom(AcidGenerics,mapGenesToSymbols)
 importFrom(AcidGenerics,melt)
@@ -126,12 +126,13 @@ importFrom(AcidGenerics,plotDots)
 importFrom(AcidGenerics,plotFeature)
 importFrom(AcidGenerics,plotKnownMarkers)
 importFrom(AcidGenerics,plotMarker)
-importFrom(AcidGenerics,plotPCElbow)
+importFrom(AcidGenerics,plotPcElbow)
+importFrom(AcidGenerics,plotPca)
 importFrom(AcidGenerics,plotReducedDim)
 importFrom(AcidGenerics,plotStackedBarPlot)
-importFrom(AcidGenerics,plotTSNE)
 importFrom(AcidGenerics,plotTopMarkers)
-importFrom(AcidGenerics,plotUMAP)
+importFrom(AcidGenerics,plotTsne)
+importFrom(AcidGenerics,plotUmap)
 importFrom(AcidGenerics,plotViolin)
 importFrom(AcidGenerics,sampleData)
 importFrom(AcidGenerics,snakeCase)
@@ -156,7 +157,6 @@ importFrom(BiocGenerics,do.call)
 importFrom(BiocGenerics,lapply)
 importFrom(BiocGenerics,normalize)
 importFrom(BiocGenerics,organism)
-importFrom(BiocGenerics,plotPCA)
 importFrom(BiocGenerics,sapply)
 importFrom(BiocGenerics,sizeFactors)
 importFrom(BiocGenerics,sort)
@@ -258,7 +258,7 @@ importFrom(goalie,isAlpha)
 importFrom(goalie,isAny)
 importFrom(goalie,isCharacter)
 importFrom(goalie,isFlag)
-importFrom(goalie,isGGScale)
+importFrom(goalie,isGgscale)
 importFrom(goalie,isHeaderLevel)
 importFrom(goalie,isInt)
 importFrom(goalie,isIntegerish)
@@ -300,7 +300,7 @@ importMethodsFrom(AcidExperiment,"interestingGroups<-")
 importMethodsFrom(AcidExperiment,"sampleData<-")
 importMethodsFrom(AcidExperiment,convertGenesToSymbols)
 importMethodsFrom(AcidExperiment,interestingGroups)
-importMethodsFrom(AcidExperiment,mapGenesToIDs)
+importMethodsFrom(AcidExperiment,mapGenesToIds)
 importMethodsFrom(AcidExperiment,mapGenesToRownames)
 importMethodsFrom(AcidExperiment,mapGenesToSymbols)
 importMethodsFrom(AcidExperiment,metrics)
@@ -314,11 +314,11 @@ importMethodsFrom(AcidPlots,plotDots)
 importMethodsFrom(AcidPlots,plotFeature)
 importMethodsFrom(AcidPlots,plotKnownMarkers)
 importMethodsFrom(AcidPlots,plotMarker)
-importMethodsFrom(AcidPlots,plotPCA)
+importMethodsFrom(AcidPlots,plotPca)
 importMethodsFrom(AcidPlots,plotReducedDim)
 importMethodsFrom(AcidPlots,plotStackedBarPlot)
-importMethodsFrom(AcidPlots,plotTSNE)
-importMethodsFrom(AcidPlots,plotUMAP)
+importMethodsFrom(AcidPlots,plotTsne)
+importMethodsFrom(AcidPlots,plotUmap)
 importMethodsFrom(AcidPlots,plotViolin)
 importMethodsFrom(AcidPlyr,leftJoin)
 importMethodsFrom(AcidPlyr,melt)
