Improve SCE-to-Seurat coercion

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -187,6 +187,7 @@ importFrom(Seurat,CreateSeuratObject)
 importFrom(Seurat,DefaultAssay)
 importFrom(Seurat,Idents)
 importFrom(Seurat,NormalizeData)
+importFrom(Seurat,ScaleData)
 importFrom(Seurat,Stdev)
 importFrom(Seurat,VariableFeatures)
 importFrom(SeuratObject,LayerData)
