Quiet down data scaling during interconversion

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -270,6 +270,7 @@ importFrom(goalie,isScalar)
 importFrom(goalie,isScalarNumeric)
 importFrom(goalie,isString)
 importFrom(goalie,isSubset)
+importFrom(goalie,quietly)
 importFrom(goalie,requireNamespaces)
 importFrom(goalie,validate)
 importFrom(methods,"slot<-")
